--- a/views/artist-search-results.hbs
+++ b/views/artist-search-results.hbs
@@ -1,7 +1,11 @@
-<div>
+<div class="searchResults">
+    
     {{#each artists}}
-    <div>
-        <img src="{{this.images}}" alt="">
+    
+    <div class="artistsInfo">
+        {{#each photo}}
+        <img src="{{url}}" alt="">
+        {{/each}}
         <h3>Name: {{this.name}}</h3>
         <a href="{{this.href}}">View Albums</a>
     </div>
